--- a/A Data Science Project.ipynb
+++ b/A Data Science Project.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, my goal is to answer some question to create a data science education program. I will use a website to detect the most asked questions. This website is [Data Science Stack Exchange](https://datascience.stackexchange.com/). Stack Exchange releases it's data base. It has a [link](https://data.stackexchange.com/datascience/query/new). You can reach every data from this link. If you need help, there is a [help section](https://data.stackexchange.com/help)."
+    "In this project, my goal is to answer some questions to create a data science education program. I will use a website to detect the most asked questions. This website is [Data Science Stack Exchange](https://datascience.stackexchange.com/). Stack Exchange releases its data base in this [link](https://data.stackexchange.com/datascience/query/new). You can reach every data set from this link. If you need help, there is a [help section](https://data.stackexchange.com/help)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I need to use Microsoft's SQL query to obtain data from the website which I need. I will get only questions to understand what students are having trouble with. Also, I need the date of created, score, the count of view, tags, the count of answers and the count of question was favored. I will use only 2019's questions, because I want to get information about recent situation."
+    "I need to use MySQL query to obtain data that I need from the website. I will get only questions to understand what students are having trouble with. Also, I need the date of creation, the score, the view count, the tags, the count of answers and the count of questions. I will only use 2019 questions because I want to get recent information."
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will modify the \"Tags\" column, first. After that I will count how many times each tags was used."
+    "I will modify the \"Tags\" column, first. After that, I will count how many times each tags was used."
    ]
   },
   {
@@ -715,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I visualized two of dataframe. You can compare the most viewed tags and the most used tags above. In the next step I will explore the relationship between tags. "
+    "I visualized two of dataframe. You can compare the most viewed tags and the most used tags above. In the next step, I will explore the relationship between tags. "
    ]
   },
   {
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will explore the tags. Tags are used together with each other. I will search how many times tags are used together."
+    "I will explore the tags. The tags are used together with each other. I will search how many times the tags are used together."
    ]
   },
   {
@@ -893,7 +893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataframe is little bit large. I will use only most used tags to help to make easy my job. "
+    "This dataframe is little bit large. I will only use most used tags to help to make easy my job. "
    ]
   },
   {
@@ -2178,7 +2178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Machine learning and python are used more. They are like a general heading for data science. After them we see the \"deep learning\" concept. I will invetigate the \"deep learning\" concept deeply. To do that, I will use another data set. And, the data set is obtained from Stack Exchance website with a query below:\n",
+    "Machine learning and Python are used more. They are like a general heading for data science. After them I see the \"deep learning\" concept. I will investigate the \"deep learning\" concept deeply. To do that, I will use another data set. And, the data set is obtained from Stack Exchance website with a query below:\n",
     "<br>\n",
     "<br>\n",
     "SELECT Id, CreationDate, Tags\n",
@@ -2296,7 +2296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will use the same technic to get the \"deep learning\" tags. Also, there are diffirent tags which is related with deep learning. I will use the list to decide that the post is related with deep learning, below:\n",
+    "I will use the same technic to get the \"deep learning\" tags. Also, there are different tags which is related with deep learning. I will use the list to decide that the post is related with deep learning, below:\n",
     "<br>\n",
     "[\"lstm\", \"cnn\", \"scikit-learn\", \"tensorflow\", \"keras\", \"neural-network\", \"deep-learning\"]\n",
     "<br>"
@@ -2818,7 +2818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Especially, there is a increase onthe interest of deep learning contents after Stack Exchange started. And, it is still protecting it's condition. For the last quarter of the year of 2019, the interest is approximately 41%. Regarding to this graphic. I can advise that, the data science education program can be planned with deep learning contents. "
+    "Especially, there is a increase on the interest of deep learning contents after Stack Exchange started. It is still protecting it's condition. For the last quarter of the year of 2019, the interest is approximately 41%. Regarding to this graphic. I can advise that, the data science education program can be planned with deep learning contents. "
    ]
   }
  ],
@@ -2838,7 +2838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
