--- a/A Data Science Project.ipynb
+++ b/A Data Science Project.ipynb
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"FavoriteCount\" column has null values, it means that some questions are not favored. So, I will replace this null values with \"0\". "
+    "The \"FavoriteCount\" column has null values, it means that some questions are not favored. So, I will replace these null values with \"0\". "
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will modify the \"Tags\" column, first. After that, I will count how many times each tags was used."
+    "I will modify the \"Tags\" column first. After that, I will count how many times each tag was used."
    ]
   },
   {
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's visualize the most used 20 tags."
+    "Let's visualize the 20 most used tags."
    ]
   },
   {
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We found most used tags. Now, I will find the most viewed tags."
+    "We found the most used tags. Now, I will find the most viewed tags."
    ]
   },
   {
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's visualize the most viewed 20 tags."
+    "Let's visualize the 20 most viewed tags."
    ]
   },
   {
@@ -715,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I visualized two of dataframe. You can compare the most viewed tags and the most used tags above. In the next step, I will explore the relationship between tags. "
+    "I visualized two dataframes. You can compare the most viewed tags and the most used tags above. In the next step, I will explore the relationship between tags. "
    ]
   },
   {
@@ -893,7 +893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataframe is little bit large. I will only use most used tags to help to make easy my job. "
+    "This dataframe is a little bit large. I will only use the most used tags to help make my job easier. "
    ]
   },
   {
@@ -2178,7 +2178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Machine learning and Python are used more. They are like a general heading for data science. After them I see the \"deep learning\" concept. I will investigate the \"deep learning\" concept deeply. To do that, I will use another data set. And, the data set is obtained from Stack Exchance website with a query below:\n",
+    "Machine learning and Python are used more. They are like a general heading for data science. After them, I see the \"deep learning\" concept. I will investigate the \"deep learning\" concept further. To do that, I will use another data set. The data set is obtained from Stack Exchance website with a query below:\n",
     "<br>\n",
     "<br>\n",
     "SELECT Id, CreationDate, Tags\n",
@@ -2296,7 +2296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will use the same technic to get the \"deep learning\" tags. Also, there are different tags which is related with deep learning. I will use the list to decide that the post is related with deep learning, below:\n",
+    "I will use the same technique to get the \"deep learning\" tags. Also, there are different tags which are related to deep learning. I will use the list to decide that the post is related to deep learning, below:\n",
     "<br>\n",
     "[\"lstm\", \"cnn\", \"scikit-learn\", \"tensorflow\", \"keras\", \"neural-network\", \"deep-learning\"]\n",
     "<br>"
@@ -2818,7 +2818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Especially, there is a increase on the interest of deep learning contents after Stack Exchange started. It is still protecting it's condition. For the last quarter of the year of 2019, the interest is approximately 41%. Regarding to this graphic. I can advise that, the data science education program can be planned with deep learning contents. "
+    "Especially, there is an increase in the interest of deep learning contents after Stack Exchange started. It is still protecting its condition. For the last quarter of the year 2019, the interest is approximately 41%. Regarding this graphic, I can advise that the data science education program can be planned with deep learning contents. "
    ]
   }
  ],
